[package]
name = "bevy-ratatui-cube"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }
bevy_ratatui = "0.10.0"
bevy_ratatui_camera = "0.16.0"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
